fix: booking in profile not aligned to no of bookings

--- a/src/styles/CustomModal.css
+++ b/src/styles/CustomModal.css
@@ -11,6 +11,7 @@
 /* Overlay */
 .modal-overlay {
   position: fixed;
+  height: 100%;
   inset: 0;
   background: rgba(0,0,0,0.4);
   display: flex;
